[package]
name = "aluminum_carbon"
version = "0.1.0"
authors = ["timotree3 <timorcb@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
dotenv = "0.13.0"
serde = "1.0.0"
serde_derive = "1.0.0"

[dependencies.diesel]
version = "1.0.0"
default-features = false
features = ["sqlite"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "diesel_sqlite_pool", "tera_templates"]
